[CALCITE-1602] Remove uses of deprecated APIs